# TubeTalk-AI

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  webm_to_mp4.py
audio/: xVe87QpNE80.webm.part
db/: chroma.sqlite3
imgs/: prompt
main/: main.py
main/transcripts/: X9cHONwKkn4
test/: app.py  quiz.py
transcripts/: BgNdtk9h8Ok.txt  Hb9QvSODBPY.txt  KN2Sg0UU-to  L0NxT2i-LOY  N4JVT3eVBP8.txt  Q5_rWinkhh4.txt  TQwwK7P_J4I.txt  XwYY0lCGWW8.txt  oBiGDhnRl8M.txt  s0jL3EKxt6I.txt  wjZofJX0v4M
